added icons and adjusted styles

--- a/src/component/home/contact/Contact.css
+++ b/src/component/home/contact/Contact.css
@@ -16,11 +16,16 @@
     flex-direction: column;
 }
 
+.main-service h2, .inner-service p{
+    color: beige;
+}
+
 
 .form-group{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    color: goldenrod;
 }
 
 .form-group label{
@@ -54,5 +59,7 @@ button{
     
 }
 @media screen and (max-width:950px) {
-    
+    .inner-service{
+        width: 90%;
+    }
 }
