--- a/src/component/home/service/Service.css
+++ b/src/component/home/service/Service.css
@@ -1,3 +1,4 @@
+
 .main{
     display: flex;
     width: 100%;
@@ -17,6 +18,12 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
 
+}
+
+.service-list h3{
+    color: rgb(119, 119, 78);
+    margin-bottom: 10px;
+    font-size: 23px;
 }
 
 @media screen and (max-width:950px) {
